reduced feedback page details textarea to something closer to comp. setting rows in the html apparently doesn't work in IE anyway, so we need to go with pixel height; also fixed the weird triple line spacing that was going on.

--- a/styles/pages/_feedback-page.scss
+++ b/styles/pages/_feedback-page.scss
@@ -45,6 +45,11 @@
     }
   }
 
+  #feedback_details {
+    height: 120px;
+    line-height: 1.5;
+  }
+
   #customer-feedback-exit-modal {
     text-align: center;
 
